tests/core/data/csl/TypeLoaderTests/SyntaxError/struct1.csl
structt struct1
{
	string name;
};
